feat: add new section to site

--- a/index.html
+++ b/index.html
@@ -75,6 +75,71 @@
           </div>
         </div>
       </section>
+      <section class="food">
+        <div class="background"></div>
+        <div class="food-wrapper">
+          <img src="./assets/images/burger.png" alt="big burger">
+          <div class="definition">
+            <h2>Burger King</h2>
+            <div class="history">
+              Together with McDonald’s, Burger King has grown to become synonymous with burgers in the US.
+            </div>
+            <div class="price">
+              <div class="current-price">$6</div>
+              <div class="previous-price">$8</div>
+            </div>
+            <button>Order now</button>
+          </div>
+        </div>
+      </section>
+      <section class="restaurants">
+        <div class="sells">
+          <div class="sell sell1">
+            <div class="text">
+              <h3>Dairy Queen</h3>
+              <div class="intelligence">Dairy Queen is one of the biggest fast-food.</div>
+              <div class="price-firm">
+                <div class="min-price">$4</div>
+                <div class="max-price">$6</div>
+              </div>
+              <button>Order now</button>
+            </div>
+          </div>
+          <div class="sell sell2">
+            <div class="text">
+              <h3>Pizza Hut</h3>
+              <div class="intelligence">Although the Pizza Hut Menu Prices.</div>
+              <div class="price-firm">
+                <div class="min-price">$3</div>
+                <div class="max-price">$7</div>
+              </div>
+              <button>Order now</button>
+            </div>
+          </div>
+          <div class="sell sell3">
+            <div class="text">
+              <h3>Burger King</h3>
+              <div class="intelligence">Together with McDonald’s, Burger King.</div>
+              <div class="price-firm">
+                <div class="min-price">$5</div>
+                <div class="max-price">$6</div>
+              </div>
+              <button>Order now</button>
+            </div>
+          </div>
+          <div class="sell sell4">
+            <div class="text">
+              <h3>Papa John’s</h3>
+              <div class="intelligence">Papa John’s is one of the most popular fast-food.</div>
+              <div class="price-firm">
+                <div class="min-price">$6</div>
+                <div class="max-price">$8</div>
+              </div>
+              <button>Order now</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </div>
 </body>
