feat: add our-team, add contact-us section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,57 @@
           </div>
         </div>
       </section>
+      <section class="our-team">
+        <div class="teams">
+          <div class="circle">
+            <div class="big-circle">
+              <div class="small-circle">
+                <div class="ginger"><img src="./assets/images/ginger.png" alt=""></div>
+              </div>
+            </div>
+            <div class="black"><img src="./assets/images/black.png" alt=""></div>
+            <div class="blond"><img src="./assets/images/blond.png" alt=""></div>
+            <div class="brutal"><img src="./assets/images/brutal.png" alt=""></div>
+            <div class="gay"><img src="./assets/images/gay.png" alt=""></div>
+          </div>
+
+          <div class="review">
+            <div class="coma"><img src="./assets/images/coma.png" alt=""></div>
+            <div class="comment">Thanks a lot for the prompt service. Really appreciate. Excellence taste in Every Bite.Add a joy of best Taste. Foodie Moments.</div>
+            <div class="commentator">Adele A. McNeill</div>
+            <div class="nation">AMIRICAN</div>
+          </div>
+        </div>
+      </section>
+      <section class="menu-D">
+        <div class="background-button"></div>
+        <div class="downloads">
+          <div class="download">Download Our Menu</div>
+          <button>Download</button>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="contact-us">
+        <i class="logo"></i>
+        <div class="link">
+          <div class="email">
+            <i class="email-icon"></i>
+            <a href="#" class="email-link">fastfood_usa@gmail.com</a>
+          </div>
+          <div class="global">
+            <i class="global-icon"></i>
+            <a href="#" class="global-link">www.fastfood_usa.com</a>
+          </div>
+        </div>
+      </div>
+      <div class="our-menu">
+
+      </div>
+      <div class="information"></div>
+      <div class="links"></div>
+      <div class="social"></div>
+    </footer>
   </div>
 </body>
 </html>
