feat: update contact-us section

--- a/index.html
+++ b/index.html
@@ -185,11 +185,32 @@
         </div>
       </div>
       <div class="our-menu">
-
+        <div class="title">Our menu</div>
+        <a href="#">Breakfast</a>
+        <a href="#">Lunch</a>
+        <a href="#">Dinner</a>
       </div>
-      <div class="information"></div>
-      <div class="links"></div>
-      <div class="social"></div>
+      <div class="information">
+        <div class="title">Information</div>
+        <a href="#">About us</a>
+        <a href="#">Testimonial</a>
+        <a href="#">Event</a>
+      </div>
+      <div class="links">
+        <div class="title">Useful Links</div>
+        <a href="#">Services</a>
+        <a href="#">Support</a>
+        <a href="#">Conditions</a>
+      </div>
+      <div class="socials">
+        <div class="title">Social Handles</div>
+        <div class="social">
+          <a href="#"><i class="facebook"></i></a>
+          <a href="#"><i class="twitter"></i></a>
+          <a href="#"><i class="instagram"></i></a>
+          <a href="#"><i class="linkedin"></i></a>
+        </div>
+      </div>
     </footer>
   </div>
 </body>
